# Just-an-LSP

./: CMakeLists.txt  README.md
.github/workflows/: formatting.yml  static-analysis.yml  test.yml
config_files/: congiguration.xml
scripts/: migrations.sh
snippets/: snippets.json
source/: ErrorCodes.h  LanguageServer.cpp  LanguageServer.h  Logger.h  Main.cpp  Message.h  NotificationMessage.cpp  NotificationMessage.h  RequestMessage.cpp  RequestMessage.h  ResponseError.cpp  ResponseError.h  ResponseMessage.cpp  ResponseMessage.h
src/: Client.h  ClientCapabilites.h  ClientInfo.h  ErrorCodes.h  HoverClientCapabilities.h  InitializeParams.cpp  InitializeParams.h  InitializeRequest.cpp  InitializeRequest.h  JustAnLSPFacade.cpp  JustAnLSPFacade.h  JustAnLSPServer.cpp  JustAnLSPServer.h  LanguageServer.cpp  LanguageServer.h  Logger.h  Main.cpp  MarkupKind.h  Message.h  NotificationMessage.cpp  NotificationMessage.h  RequestMessage.cpp  RequestMessage.h  RequestType.h  RequestUtil.h  ResponseError.cpp  ResponseError.h  ResponseMessage.cpp  ResponseMessage.h  ResponseUtil.h  ServerInfo.h  TextDocumentCapabilities.h  TextDocumentSyncClientCapabilites.h  TimeUtil.h  TraceUtil.h  TraceValue.h  migrate.sh
src/Algo/: Trie.cpp  Trie.h
src/Capabilities/: ClientCapabilites.h  HoverClientCapabilities.cpp  HoverClientCapabilities.h  ServerCapabilities.cpp  ServerCapabilities.h  ServerCapabilitiesDirector.h  TextDocumentCapabilities.h
src/CodeActions/: CodeActionProviderFactory.h  FakeCodectionsProvider.cpp  FakeCodectionsProvider.h  ICodeActionsProvider.h
src/Completions/: CompletionProviderFactory.h  FakeCompletionProvider.cpp  FakeCompletionProvider.h  ICompletionProvider.h
src/Config/: ConfigurationManager.cpp  ConfigurationManager.h
src/Core/: JUstAnLSPClientService.h  JUstAnLSPReqHandler.cpp  JustAnLSPClient.cpp  JustAnLSPClient.h  JustAnLSPClientService.cpp  JustAnLSPCounter.cpp  JustAnLSPCounter.h  JustAnLSPErrorDirector.h  JustAnLSPErrorHandler.cpp  JustAnLSPErrorHandler.h  JustAnLSPFacade.cpp  JustAnLSPFacade.h  JustAnLSPReqHandler.h  JustAnLSPServer.cpp  JustAnLSPServer.h
src/Diagnostics/: ClangDiagnosticsProvider.cpp  ClangDiagnosticsProvider.h  DiagnosticsProviderFactory.h  FakeDiagnosticsProvider.cpp  FakeDiagnosticsProvider.h  IDiagnosticsProvider.h
src/Enums/: CodeActionKind.h  ComletionTriggerKind.h  CompletionItemKind.h  DiagnosticSeverity.h  InsertTextFormat.h  MarkupKind.h  RequestType.h  TextDocumentSyncKind.h
src/Factories/: CodeActionProviderFactory.h  CompletionProviderFactory.h  MessageFactory.h
src/Messages/: Message.h
src/Params/: CodeActionParams.cpp  CodeActionParams.h  CompletionParams.cpp  CompletionParams.h  DefintionParams.h  DidChangeTextDocumentParams.cpp  DidChangeTextDocumentParams.h  DidOpenTextDocumentParams.cpp  DidOpenTextDocumentParams.h  HoverParams.h  InitializeParams.cpp  InitializeParams.h  PublishDiagnosticsParams.h  TextDocumentPositionParams.cpp  TextDocumentPositionParams.h
src/Results/: CodeActionResult.cpp  CodeActionResult.h  CompletionResult.cpp  CompletionResult.h  HoverResult.h  InitializeResult.h
src/Rpc/: Rpc.h
src/Snippets/: FakeSnippetProvider.cpp  FakeSnippetProvider.h  IRepostioryFactory.h  ISnippetProvider.h  ISnippetRepository.h  PredefinedSnipetProvider.cpp  PredefinedSnipetProvider.h  RepostioryFactory.h  SnippetProviderFactory.h  SnippetRepository.cpp  SnippetRepository.h  SnippetRepositoryFactory.h
src/Types/: CodeAction.cpp  CodeAction.h  CodeDescription.h  CompletionContext.h  CompletionItem.cpp  CompletionItem.h  Diagnostic.h  DiagnosticsRelatedInformation.h  Location.h  Position.h  Range.h  TextDocumentIdentifier.h  TextDocumentItem.cpp  TextEdit.h  WorkspaceEdit.cpp  WorkspaceEdit.h
src/Utils/: Convert.h  DocumentUtil.h  Logger.h  MessageUtil.h  RequestMethodUtil.h  TimeUtil.h  TraceUtil.h  XMLUtil.h
src/algo/: Trie.cpp  Trie.h  TrieNode.h
src/capabilities/: ClientCapabilites.h  HoverClientCapabilities.cpp  HoverClientCapabilities.h  ServeCapabilitiesDirector.h  ServerCapabilities.cpp  ServerCapabilities.h  TextDocumentCapabilities.h  TextDocumentSyncClientCapabilites.h
src/core/: JUstAnLSPClientService.h  JUstAnLSPReqHandler.cpp  JustAnLSPClient.cpp  JustAnLSPClient.h  JustAnLSPClientClient.h  JustAnLSPClientService.cpp  JustAnLSPCounter.cpp  JustAnLSPCounter.h  JustAnLSPErrorHandler.cpp  JustAnLSPErrorHandler.h  JustAnLSPFacade.cpp  JustAnLSPFacade.h  JustAnLSPReqHandler.h  JustAnLSPServer.cpp  JustAnLSPServer.h
src/enums/: CompletionItemKind.h  DiagnosticSeverity.h  DiagnosticTag.h  ExitStatus.h  MarkupKind.h  RequestType.h  TextDocumentSyncKind.h  TraceValue.h
src/errors/: ErrorCodes.h
src/factories/: MessageFactory.h  RequestMessageFactory.h
src/factory/: RequestMessageFactory.h
src/headers/: ClientInfo.h  ErrorCodes.h  InitializeParams.h  InitializeRequest.h  JustAnLSPFacade.h  JustAnLSPServer.h  LanguageServer.h  Logger.h  Message.h  RequestMessage.h  RequestType.h
src/messages/: CompletionResponse.cpp  CompletionResponse.h  CompletionResult.h  DidChangeTextDocumentRequest.cpp  DidChangeTextDocumentRequest.h  DidOpenTextDocumentRequest.cpp  DidOpenTextDocumentRequest.h  InitializeRequest.cpp  (+15 more)
test/: CMakeLists.txt
test/Algo/: TrieTest.cpp
test/CodeAction/: FakeCodeActionProviderTest.cpp
test/Config/: ConfigurationManagerTest.cpp
test/Core/: JustAnLSPClientTest.cpp  JustAnLSPCounterTest.cpp
test/Messages/: CompletionResponseTest.cpp  InitializeResponseTest.cpp  PublishDiagnosticsTest.cpp  ResponseMessageTest.cpp  ShutdownResponseTest.cpp
test/Rpc/: RpcTest.cpp
test/Utils/: ConvertTest.cpp  DocumentUtilTest.cpp  MessageUtilTest.cpp  RequestMethodType.cpp  TraceLevelTest.cpp  XMLUtilTest.cpp
test/algo/: TrieTest.cpp
test/core/: JustAnLSPClientTest.cpp  JustAnLSPCounterTest.cpp
test/messages/: CompletionResponseTest.cpp  InitializeResponseTest.cpp  PublishDiagnosticsTest.cpp  ResponseMessageTest.cpp  ShutdownResponseTest.cpp
test/rpc/: RpcTest.cpp
test/utils/: ConvertTest.cpp  MessageUtilTest.cpp  RequestMethodType.cpp  TraceLevelTest.cpp
(+105 files in other folders)
